--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -8,7 +8,7 @@
          processIsolation="false"
          stopOnFailure="false"
          syntaxCheck="false"
-         bootstrap="tests/src/bootstrap.php"
+         bootstrap="tests/bootstrap.php"
 >
 	<testsuites>
 		<testsuite name="FastFrame Unit Tests">
