--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,15 @@ php:
   - "7.0"
   - hhvm
 
+addons:
+  code_climate:
+    repo_token: a460b6fdcc78851ebe67540300498783ceb27f788918f034c30240231e397e0d
+
 before_script:
   - composer self-update
   - composer install --dev --prefer-source
 
-script: phpunit
+script: phpunit --coverage-clover build/logs/clover.xml
+
+after_script:
+  - vendor/bin/test-reporter
