--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,4 +1,16 @@
-languages:
-  PHP: true
+---
+engines:
+  duplication:
+    enabled: true
+    config:
+      languages:
+        - php
+  fixme:
+    enabled: true
+  phpmd:
+    enabled: true
+ratings:
+  paths:
+    - "**.php"
 exclude_paths:
-- tests/*
+  - tests/*
