--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,10 @@
     }
   },
   "require-dev": {
-    "phpunit/phpunit": "^4.8",
-    "codeclimate/php-test-reporter": "dev-master"
+    "phpunit/phpunit": "^8.5"
+  },
+  "scripts" : {
+    "test": "vendor/bin/phpunit",
+    "test-coverage": "vendor/bin/phpunit --coverage-clover build/logs/clover.xml"
   }
 }
