--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,12 +10,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: [7.2, 7.3, 7.4, 8.0]
+        php: [8.0, 8.1, 8.2, 8.3, 8.4, 8.5]
         experimental: [false]
         include:
-          - php: 7.4
+          - php: 8.0
             analysis: true
-          - php: 8.1
+          - php: 8.5
             experimental: true
 
     steps:
