--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,14 @@
       "FastFrame\\Utility\\" : "tests/src"
     }
   },
+  "require": {
+    "php": ">=8.0"
+  },
   "require-dev": {
-    "phpunit/phpunit": "^8.5"
+    "phpunit/phpunit": "^9.6"
+  },
+  "replace": {
+    "fastframe/utility-array": "*"
   },
   "scripts" : {
     "test": "vendor/bin/phpunit",
